syntax = "proto3";
option java_multiple_files = true;
option java_package = "io.grpc.jchannelRpc";
option java_outer_classname = "JChannelRpc";
option objc_class_prefix = "YINGMING";
package cn.yingming.grpc1;

service JChannelsService{
  rpc connect(stream Request) returns (stream Response) {
  }
  rpc ask(ReqAsk) returns (RepAsk) {
  }
}
message Request{
  oneof oneType{
    MessageReq messageRequest = 1;
    ConnectReq connectRequest = 2;
    DisconnectReq disconnectRequest = 3;
    StateReq stateReq = 4;
    StateMsg_withTarget_1 stateMsg1 = 5;
    StateMsg_withTarget_2 stateMsg2 = 6;
  }
}
message Response{
  oneof oneType{
    MessageRep messageResponse = 1;
    ConnectRep connectResponse = 2;
    DisconnectRep disconnectResponse = 3;
    UpdateRep updateResponse = 4;
    ViewRep viewResponse = 5;
    StateRep stateRep = 6;
    StateMsg_withTarget_1 stateMsg1 = 7;
    StateMsg_withTarget_2 stateMsg2 = 8;
  }
}
message ViewRep{
  string creator = 1;
  int32 viewNum = 2;
  int32 size = 3;
  repeated string oneAddress = 4;
}
// update the available servers list
message UpdateRep{
  string addresses = 1;
}
message MessageReq{
  string source = 1;  // uuid
  string jchannel_address = 2;  // the fake address of client jchannel, sender
  string cluster = 3;     // the cluster of jchannel-client
  string content = 4;     // content of message
  string timestamp = 5;   // time
  string destination = 6;  // "" means the broadcast in this cluster, receivers
  bytes contentByte = 7;
}
message MessageRep{
  string jchannel_address = 1; // sender
  string content = 2;
  bytes contentByte = 3;
}
// connect() of JChannel, create a bidirectional streaming of grpc
message ConnectReq {
  string source = 1;  // uuid
  string jchannel_address = 2;   // fake addresss of jchannel client
  string cluster = 3;     // cluster
  string timestamp = 4;
}

message ConnectRep {
  bool result = 1;
}

// disconnect()
message DisconnectReq{
  string source = 1;
  string jchannel_address = 2;
  string cluster = 3;
  string timestamp = 4;
}
message DisconnectRep{
  bool result = 1;
}
// The messages used for the try connection.
message ReqAsk {
  string source = 1;
}
message RepAsk{
  bool survival = 1;
}
message StateReq{
  string source = 1;
  string cluster = 2;
  string jchannel_address = 3;
}

// change
message StateRep{
  int32 size = 1;
  repeated MessageRep oneOfHistory = 2;
}

// new change
message StateMsg_withTarget_1{
  string source = 1;
  string cluster = 2;
  string jchannel_address = 3;
  string target = 4;
}

message StateMsg_withTarget_2{
  string source = 1;
  string cluster = 2;
  string jchannel_address = 3;
  repeated MessageRep oneOfHistory = 4;
  string target = 5;
}

